# eo-pipe

./: .gitignore  .graphifyignore  CLAUDE.md  README.md  pyproject.toml
docs/: future_improvements.md  troubleshooting.md
scripts/: example.py  sentinel1_preprocessing.py
src/eo_pipe/: __init__.py
src/eo_pipe/io/: __init__.py  output_types.py  path_utils.py  raster_io.py  vector_io.py
src/eo_pipe/logging/: __init__.py  logger.py
src/eo_pipe/pipeline/: __init__.py  base.py  batch.py  composition.py  context.py  registry.py
src/eo_pipe/steps/: __init__.py  utils.py
src/eo_pipe/steps/otb/: __init__.py  base.py  orthorectify.py  sar_border_cut.py  sar_calibrate.py
src/eo_pipe/steps/raster/: __init__.py  calibrate.py  clip.py  filter.py  hillshade.py  merge.py  resample.py  s1_extract.py  s1_geocode.py  sieve.py
src/eo_pipe/steps/vector/: __init__.py  merge.py  rasterize.py
tests/: conftest.py
tests/test_io/: test_raster_io.py
tests/test_pipeline/: test_batch.py  test_composition.py  test_registry.py
tests/test_steps/: test_clip.py  test_filter.py  test_merge_raster.py  test_merge_vector.py  test_otb.py  test_resample.py  test_s1_extract.py  test_sieve.py
