[project]
name = "eo-pipe"
version = "0.1.1"
description = "Agnostic Earth Observation processing pipeline library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core raster / vector stack — all ship binary wheels, no system GDAL needed
    "numpy>=1.26",
    "rasterio>=1.3",
    "geopandas>=1.0",
    "shapely>=2.0",
    "fiona>=1.9",
    "pandas>=2.0",
    # Processing
    "scipy>=1.12",
    "scikit-image>=0.22",
    "jenkspy>=0.3",
    "rio-cogeo>=3.5",
    # Logging / UI
    "rich>=13.0",
    "pip>=26.0.1",
    "gdal==3.12.2",
    "mypy>=1.19.1",
    "gdal-utils==3.12.2.0",
    "pyarrow>=23.0.1",
    "rootutils>=1.0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.uv]
# gdal Python bindings must be compiled against the system GDAL C library.
# Disabling build isolation lets the build find the system gdal-config.
no-build-isolation-package = ["gdal", "gdal-utils"]

[tool.uv.extra-build-dependencies]
gdal = ["setuptools", "numpy"]

[tool.mypy]
python_version = "3.12"
# Relax strict flags that fire on generated/third-party code
disallow_untyped_decorators = false   # StepRegistry.register decorates user classes
warn_return_any = false               # some rasterio calls return Any
ignore_missing_imports = true


[[tool.mypy.overrides]]
# Third-party packages without type stubs or py.typed markers.
# Each is listed explicitly so mypy still catches real missing imports.
module = [
    "rasterio",
    "rasterio.*",
    "geopandas",
    "geopandas.*",
    "fiona",
    "fiona.*",
    "scipy",
    "scipy.*",
    "skimage",
    "skimage.*",
    "shapely",
    "shapely.*",
    "pandas",
    "pandas.*",
    "jenkspy",
    "rich",
    "rich.*",
    "osgeo",
    "osgeo.*",
    "osgeo_utils",
    "osgeo_utils.*",
    "rio_cogeo",
    "rio_cogeo.*",
    "pyarrow",
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
